	* Incremented the package version to 0.6.3.
2016-02-11 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out a glassplayergui(1) applet in 'src/glassplayergui/'.
2016-02-11 Fred Gleason <fredg@paravelsystems.com>
	* Got glassplayergui(1) working with XCast servers.
2016-02-11 Fred Gleason <fredg@paravelsystems.com>
	* Enumerated exit error codes in 'src/common/glasslimits.h'.
2016-02-11 Fred Gleason <fredg@paravelsystems.com>
	* Optimized the stats interface to send updates only when values
	change.
2016-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the metadata system in glassplayer(1) to include
	static as well as dynamic fields.
2016-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented metadata display in glassplayergui(1).
2016-02-12 Fred Gleason <fredg@paravelsystems.com>
	* Added stats dialog to glassplayergui(1).
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Show Stats' to toggle between showing and hiding
	the 'Stats' dialog'.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Tuned the layout of the 'Statistics' dialog.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'gui' subpackage in 'glassplayer.spec.in'.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a man page for glassplayergui(1).
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added an '#include <stdlib.h>' statement in
	'src/glassplayer/codec_null.cpp', 'src/glassplayer/dev_file.cpp',
	'src/glassplayer/dev_stdout.cpp' and 'src/glassplayer/serverid.cpp'.
	* Reworked 'src/glassplayer/serverid.cpp' so as not to rely upon
	the presence of the 'QUrl::isLocalFile()' method.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added an '#include <stdlib.h>' statement in
	'src/glassplayer/codec_fdk.cpp'.
	* Fixed a bug in 'src/glassplayer/codec_fdk.h' that broke the
	build under RHEL 6.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.4.