@@ -94,35 +94,35 @@ void Hls::loadStats(QStringList *hdrs,QStringList *values,bool is_first)
     values->push_back(hls_content_type);
   }
 
-  hdrs->push_back("Connector|HLSVersion");
+  hdrs->push_back("Connector|HLS Version");
   values->push_back(QString().sprintf("%d",hls_index_playlist->version()));
 
-  hdrs->push_back("Connector|HLSTargetDuration");
+  hdrs->push_back("Connector|HLS Target Duration");
   values->
     push_back(QString().sprintf("%d",hls_index_playlist->targetDuration()));
 
-  hdrs->push_back("Connector|HLSMediaSequence");
+  hdrs->push_back("Connector|HLS Media Sequence");
   values->
     push_back(QString().sprintf("%d",hls_index_playlist->mediaSequence()));
 
-  hdrs->push_back("Connector|HLSSegmentQuantity");
+  hdrs->push_back("Connector|HLS Segment Quantity");
   values->
     push_back(QString().sprintf("%u",hls_index_playlist->segmentQuantity()));
 
   for(unsigned i=0;i<hls_index_playlist->segmentQuantity();i++) {
     if(!hls_index_playlist->segmentTitle(i).isEmpty()) {
-      hdrs->push_back(QString().sprintf("Connector|HLSSegment%uTitle",i+1));
+      hdrs->push_back(QString().sprintf("Connector|HLS Segment%u Title",i+1));
       values->push_back(hls_index_playlist->segmentTitle(i));
     }
-    hdrs->push_back(QString().sprintf("Connector|HLSSegment%uUrl",i+1));
+    hdrs->push_back(QString().sprintf("Connector|HLS Segment%u Url",i+1));
     values->push_back(hls_index_playlist->segmentUrl(i).toString());
 
-    hdrs->push_back(QString().sprintf("Connector|HLSSegment%uDuration",i+1));;
+    hdrs->push_back(QString().sprintf("Connector|HLS Segment%u Duration",i+1));;
     values->push_back(QString().
 		      sprintf("%8.5lf",hls_index_playlist->segmentDuration(i)));
 
     if(hls_index_playlist->segmentDateTime(i).isValid()) {
-      hdrs->push_back(QString().sprintf("Connector|HLSSegment%uDateTime",i+1));
+      hdrs->push_back(QString().sprintf("Connector|HLS Segment%u DateTime",i+1));
       values->push_back(hls_index_playlist->segmentDateTime(i).
 			toString("yyyy-mm-dd hh::mm:ss"));
     }
